# CarlaSimulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  STATUS.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
carla_io/: __init__.py  coords.py  depth.py  kitti_writer.py  record_dataset.py
configs/: config.yaml
configs/data/: carla_town10.yaml
configs/eval/: default.yaml
configs/model/: yolo_seg.yaml
docs/: SETUP_CARLA.md  SETUP_DEPTH_TRAINING.md  SETUP_GAUSSIAN_SPLATTING.md  SETUP_KITTI.md  blog_draft.md  linkedin_post.md
frontend/: app.py
outputs/2026-06-15/20-31-20/.hydra/: config.yaml  hydra.yaml
perception_py/carla_perception/: __init__.py  metrics.py  pipeline.py  trajectory.py
perception_py/carla_perception/datasets/: __init__.py  kitti.py
perception_py/carla_perception/depth/: __init__.py  dataset.py  losses.py  model.py  visualize.py
perception_py/carla_perception/detection/: __init__.py  detector.py
perception_py/carla_perception/reconstruction/: __init__.py  nerf_export.py  stereo_pointcloud.py
perception_py/carla_perception/safety/: __init__.py  collision.py
perception_py/carla_perception/segmentation/: __init__.py  segmenter.py
perception_py/carla_perception/slam/: __init__.py  pose_graph.py  stereo_slam.py
perception_py/carla_perception/tracking/: __init__.py  tracker.py
perception_py/carla_perception/vo/: __init__.py  monocular_vo.py  stereo_vo.py
scripts/: demo_detection.py  demo_perception.py  demo_segmentation.py  demo_tracking.py  demo_vo.py  eval_depth.py  export_nerfstudio.py  predict_depth.py  run_reconstruct_kitti.py  run_slam_kitti.py  run_stereo_vo_kitti.py  run_vo_kitti.py  train_depth.py
tests/: test_carla_coords.py  test_carla_depth.py  test_carla_writer.py  test_collision.py  test_depth_dataset.py  test_depth_model.py  test_depth_visualize.py  test_nerf_export.py  test_pose_graph.py  test_reconstruction.py  test_slam.py  test_smoke.py  test_stereo_vo.py  test_tracker.py  test_trajectory.py  test_vo.py
